<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#41a0f1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:background="@drawable/back_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/regist"
            android:textColor="@color/white"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#4ec52e"
            android:gravity="center"
            android:text="@string/student"
            android:textColor="@color/white"
            android:textSize="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/teacher"
            android:textColor="@color/gray"
            android:textSize="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/parent"
            android:textColor="@color/gray"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#4ec52e" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#41a1f0" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#f07841" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/im_choose_school"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:background="@color/white"
            android:drawableRight="@drawable/next"
            android:gravity="center_vertical"
            android:hint="@string/input_verify_code"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:text="@string/choose_school"
            android:textColor="#646464"
            android:textSize="20dp" />


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/grey"
        android:textColorHint="#d4d4d4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_choose_grade"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:drawableRight="@drawable/next"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:text="@string/choose_grade"
            android:textColor="#646464"
            android:textSize="20dp" />


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/grey"
        android:textColorHint="#d4d4d4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_choose_class"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:drawableRight="@drawable/next"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:text="@string/choose_grade"
            android:textColor="#646464"
            android:textSize="20dp" />


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/grey"
        android:textColorHint="#d4d4d4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:orientation="vertical">

        <EditText
            android:id="@+id/et_input_user"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/input_user_name"
            android:maxLength="30"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="#646464"
            android:textSize="20dp" />


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/grey"
        android:textColorHint="#d4d4d4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:orientation="vertical">

        <EditText
            android:id="@+id/et_input_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:hint="@string/input_name"
            android:maxLength="30"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="#646464"
            android:textSize="20dp" />


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/grey"
        android:textColorHint="#d4d4d4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_input_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:background="@color/white"
            android:hint="@string/input_email"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="#646464"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/tv_getCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@color/get_verify_code"
            android:gravity="center"
            android:text="@string/get_verify_code"
            android:textColor="@color/white" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/grey"
        android:textColorHint="#d4d4d4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:orientation="vertical">

        <EditText
            android:id="@+id/et_input_email_code"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/input_email_verify_code"
            android:maxLength="30"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="#646464"
            android:textSize="20dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/grey"
        android:textColorHint="#d4d4d4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_input_new_password"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="7"
            android:background="@color/white"
            android:hint="@string/input_new_password"
            android:maxLength="30"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="#646464"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/eye_btn_press" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/grey"
        android:textColorHint="#d4d4d4" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/commit_button" />
    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/white" />
</LinearLayout>