<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/root_student_regist"
    android:orientation="vertical">
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_schoose_school"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:background="@color/white"
            android:drawableRight="@drawable/next"
            android:gravity="center_vertical"
            android:hint="@string/input_verify_code"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:text="@string/choose_school"
            android:textColor="#646464"
            android:textSize="15dp" />


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/grey"
        android:textColorHint="#d4d4d4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_schoose_grade"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:drawableRight="@drawable/next"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:text="@string/choose_grade"
            android:textColor="#646464"
            android:textSize="15dp" />


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/grey"
        android:textColorHint="#d4d4d4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_schoose_class"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:drawableRight="@drawable/next"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:text="@string/choose_class"
            android:textColor="#646464"
            android:textSize="15dp" />


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/grey"
        android:textColorHint="#d4d4d4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:orientation="vertical">

        <EditText
            android:id="@+id/et_sinput_user"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/input_user_name"
            android:maxLength="30"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="#646464"
            android:textColorHint="#d4d4d4"
            android:textSize="15dp" />


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/grey"
        android:textColorHint="#d4d4d4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:orientation="vertical">

        <EditText
            android:id="@+id/et_sinput_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:hint="@string/input_name"
            android:maxLength="30"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="#646464"
            android:textColorHint="#d4d4d4"
            android:textSize="15dp" />


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/grey"
        android:textColorHint="#d4d4d4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_sinput_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:background="@color/white"
            android:hint="@string/input_email"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="#646464"
            android:textColorHint="#d4d4d4"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tv_sgetCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@color/get_verify_code"
            android:gravity="center"
            android:text="@string/get_verify_code"
            android:textColor="@color/white" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/grey"
        android:textColorHint="#d4d4d4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:orientation="vertical">

        <EditText
            android:id="@+id/et_sinput_email_code"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/input_email_verify_code"
            android:maxLength="30"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="#646464"
            android:textColorHint="#d4d4d4"
            android:textSize="15dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/grey"
        android:textColorHint="#d4d4d4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_sinput_new_password"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="7"
            android:background="@color/white"
            android:hint="@string/input_new_password"
            android:maxLength="30"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="#646464"
            android:textColorHint="#d4d4d4"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/sshow_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/eye_btn_press" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/grey"
        android:textColorHint="#d4d4d4" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:orientation="vertical">

        <Button
            android:id="@+id/btn_scommit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/reg_teacher"
            android:text="@string/commit_button"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/white" />
</LinearLayout>